; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/tests/extr_mtd_subpagetest.c_set_random_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/tests/extr_mtd_subpagetest.c_set_random_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @set_random_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_random_data(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  br label %6

6:                                                ; preds = %15, %2
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ult i64 %7, %8
  br i1 %9, label %10, label %18

10:                                               ; preds = %6
  %11 = call zeroext i8 (...) @simple_rand()
  %12 = load i8*, i8** %3, align 8
  %13 = load i64, i64* %5, align 8
  %14 = getelementptr inbounds i8, i8* %12, i64 %13
  store i8 %11, i8* %14, align 1
  br label %15

15:                                               ; preds = %10
  %16 = load i64, i64* %5, align 8
  %17 = add i64 %16, 1
  store i64 %17, i64* %5, align 8
  br label %6

18:                                               ; preds = %6
  ret void
}

declare dso_local zeroext i8 @simple_rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
